<resources>
    <string name="app_name">子午</string>
    <string name="bottom_text_view_activity">活动</string>
    <string name="bottom_text_view_month_detail">记录</string>
    <string name="bottom_text_view_me">我</string>

    <string name="bottom_text_create_group">创建群组</string>
    <string name="bottom_text_create_activity">创建活动</string>

    <string name="create_group_hint">请输入活动群组名</string>
    <string name="create_activity_hint">请输入活动名</string>

    <string name="create_ok_button">确定</string>
    <string name="create_cancel_button">取消</string>

    <string name="seven_days">最近七天</string>
    <string name="seven_weeks">最近七周</string>
    <string name="one_year">最近一年</string>
    <string name="seven_years">最近七年</string>

    <string name="add_plan_every_day">每日计划</string>
    <string name="add_plan_this_week">每周计划</string>
    <string name="add_plan_long_time">长期计划</string>

    <string name="add_plan_add">添加</string>
    <string name="add_plan_name">名称</string>
    <string name="add_plan_more">更多选项</string>
    <string name="add_plan_priority">优先级</string>
    <string name="add_plan_time">计划用时</string>
    <string name="add_plan_parent_week">加入周目标</string>
    <string name="add_plan_parent_long_term">持续时间</string>
    <string name="add_plan_tag">标签</string>

    <string name="add_plan_delete">删除</string>
</resources>
