<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FDFEFE">

    <TextView
        android:id="@+id/tv_show_seven_day"
        style="@style/popup_window_content"
        android:text="@string/seven_days" />
    <View
        style="@style/popup_window_content_divider"/>
    <TextView
        android:id="@+id/tv_show_seven_weeks"
        style="@style/popup_window_content"
        android:text="@string/seven_weeks"/>
    <View
        style="@style/popup_window_content_divider"/>
    <TextView
        android:id="@+id/tv_show_one_year"
        style="@style/popup_window_content"
        android:text="@string/one_year"/>
    <View
        style="@style/popup_window_content_divider"/>
    <TextView
        android:id="@+id/tv_show_seven_years"
        style="@style/popup_window_content"
        android:text="@string/seven_years"/>
</LinearLayout>