<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="#aa00aa">
    <LinearLayout
        style="@style/bottom_layout_linear_layout_style">
        <ImageView
            style="@style/bottom_layout_image_view_style"
            android:src="@mipmap/group_icon"/>
        <TextView
            style="@style/bottom_layout_text_view_style"
            android:text="@string/bottom_text_view_activity"/>
    </LinearLayout>
    <LinearLayout
        style="@style/bottom_layout_linear_layout_style">
        <ImageView
            style="@style/bottom_layout_image_view_style"
            android:src="@mipmap/history_record_bottom_icon"/>
        <TextView
            style="@style/bottom_layout_text_view_style"
            android:text="@string/bottom_text_view_month_detail"/>
    </LinearLayout>
    <LinearLayout
        style="@style/bottom_layout_linear_layout_style">
        <ImageView
            style="@style/bottom_layout_image_view_style"
            android:src="@mipmap/activity_icon"/>
        <TextView
            style="@style/bottom_layout_text_view_style"
            android:text="@string/bottom_text_view_me"/>
    </LinearLayout>
</LinearLayout>