<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@+id/ll_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/ll_add_plan_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="60dp"
        tools:visibility="visible"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_add_every_day_plan"
            style="@style/add_plan_popup_window"
            android:text="@string/add_plan_every_day"/>
        <TextView
            android:id="@+id/tv_add_this_week_plan"
            style="@style/add_plan_popup_window"
            android:text="@string/add_plan_this_week"/>
        <TextView
            android:id="@+id/tv_add_this_long_time_plan"
            style="@style/add_plan_popup_window"
            android:text="@string/add_plan_long_time"/>
    </LinearLayout>
    <tinker.cn.timemanager.ui.widget.AddImageButton
        android:id="@+id/aib_add_plan"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        app:AddButtonBackground="@drawable/wi_add_button_background"
        app:AddButtonImageSrc="@drawable/wi_add_button_vector"/>
</RelativeLayout>